--- a/src/index.html
+++ b/src/index.html
@@ -355,7 +355,7 @@
       </div>
 
       <!-- Projects section -->
-      <div class="p-8 md:p-6 flex flex-col items-center min-h-screen">
+      <div class="p-8 md:p-6 flex flex-col items-center">
         <div class="flex flex-col items-center mt-10 mb-10">
           <p class="tracking-wide text-2xl font-bold text-gray-700">
             OUR LATEST PROJECTS
@@ -461,7 +461,7 @@
                 bg-red-400
                 w-28
                 h-8
-                mb-12
+                mb-8
                 text-xs
                 font-semibold
               "
@@ -473,7 +473,10 @@
       </div>
 
       <!-- Features section -->
-      <div style="background-color: #2e3253; height: 160vh" class="relative">
+      <div
+        style="background-color: #2e3253"
+        class="relative flex flex-col items-center"
+      >
         <!-- Top triangle separator -->
         <img src="./assets/img/top-triangle.png" class="w-full" alt="" />
 
@@ -544,17 +547,8 @@
         <img
           src="./assets/img/mobile-cut.png"
           alt=""
-          style="height: 500px; width: 480px"
-          class="
-            h-2/5
-            w-2/4
-            absolute
-            bottom-0
-            left-1/2
-            transform
-            -translate-x-1/2
-            lg:h-2/4 lg:-translate-x-0 lg:left-0 lg:bottom-20
-          "
+          style="height: 500px; width: 450px"
+          class="xl:h-2/4 2xl:mb-48"
         />
 
         <!-- Bottom triangle separator -->
@@ -568,7 +562,7 @@
       <!-- Values section -->
       <div
         class="
-          mt-10
+          mt-12
           px-7
           flex flex-col
           items-left
@@ -702,12 +696,9 @@
       </div>
 
       <!-- Video section -->
-      <div
-        style="background-color: #49e1eb"
-        class="mt-14"
-      >
+      <div style="background-color: #49e1eb" class="mt-7">
         <img src="./assets/img/top-triangle1.png" alt="" class="w-full" />
-        <div class="flex flex-col items-center mb-28">
+        <div class="flex flex-col items-center mb-10">
           <p
             class="text-5xl text-center text-white mt-14 mb-10 font-extralight"
           >
@@ -799,7 +790,7 @@
             tracking-widest
             font-bold
             border-2
-            mb-20
+            mb-10
             w-48
             h-10
             rounded-full
